--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             background-clip: text;
             -webkit-background-clip: text;
             color: transparent;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
                          0 0 20px rgba(255, 0, 255, 0.8);
             animation: glow 1.5s infinite alternate;
         }
@@ -50,16 +50,16 @@
 
         @keyframes glow {
             from {
-                text-shadow: 0 0 10px #fff, 
-                             0 0 20px #ff00cc, 
-                             0 0 30px #ff00cc, 
+                text-shadow: 0 0 10px #fff,
+                             0 0 20px #ff00cc,
+                             0 0 30px #ff00cc,
                              0 0 40px #ff00cc;
             }
 
             to {
-                text-shadow: 0 0 20px #fff, 
-                             0 0 30px #3333ff, 
-                             0 0 40px #00ffcc, 
+                text-shadow: 0 0 20px #fff,
+                             0 0 30px #3333ff,
+                             0 0 40px #00ffcc,
                              0 0 50px #ff00cc;
             }
         }
@@ -68,5 +68,6 @@
 <body>
     <h1>Welcome</h1>
     <button>Connexion</button>
+    <button>Inscription</button>
 </body>
 </html>
